@@ -5,6 +5,7 @@
 ; Note : All ini files need to be saved as UTF-8
 
 ALLOWS SEARCHING OF ALL ARTICLES="Enables searching of all Articles"
+ARTICLES="Articles"
 ARCHIVED CONTENT="Archived Articles"
 CONTENT ITEMS="Articles"
 NUMBER OF SEARCH ITEMS TO RETURN="Number of search items to return"
