@@ -7,5 +7,5 @@
 ALLOWS SEARCHING OF WEBLINKS COMPONENT="Enables searching of Web Links Component"
 NUMBER OF SEARCH ITEMS TO RETURN="Number of search items to return"
 SEARCH LIMIT="Search Limit"
-
+WEBLINKS="Web Links"
 
