@@ -20,6 +20,7 @@ USER_PROFILE_REGION_DESC="Region Desc"
 USER_PROFILE_REGION_LABEL="Region"
 USER_PROFILE_WEB_SITE_DESC="Web Site Desc"
 USER_PROFILE_WEB_SITE_LABEL="Web site"
+USER_PROFILE_PLUGIN_DESC="User Profile Plug-in"
 
 
 MEMBERS_REGISTRATION_TOGGLE_ADDRESS1_LABEL="Reg. Address 1"
