@@ -1,23 +1,0 @@
-; $Id: en-GB.plg_user_profile.ini 11822 2009-05-16 10:52:01Z erdsiger $
-; Joomla! Project
-; Copyright (C) 2005 - 2010 Open Source Matters. All rights reserved.
-; License http://www.gnu.org/licenses/gpl-2.0.html GNU/GPL, see LICENSE.php
-; Note : All ini files need to be saved as UTF-8 - No BOM
-
-USER_PROFILE_ADDRESS1_DESC="Address1 Desc"
-USER_PROFILE_ADDRESS1_LABEL="Address1"
-USER_PROFILE_ADDRESS2_DESC="Address2 Desc"
-USER_PROFILE_ADDRESS2_LABEL="Address2"
-USER_PROFILE_CITY_DESC="City Desc"
-USER_PROFILE_CITY_LABEL="City"
-USER_PROFILE_COUNTRY_DESC="Country Desc"
-USER_PROFILE_COUNTRY_LABEL="Country"
-USER_PROFILE_PHONE_DESC="Phone Desc"
-USER_PROFILE_PHONE_LABEL="Phone"
-USER_PROFILE_POSTAL_CODE_DESC="Postal Code Desc"
-USER_PROFILE_POSTAL_CODE_LABEL="Postal Code"
-USER_PROFILE_REGION_DESC="Region Desc"
-USER_PROFILE_REGION_LABEL="Region"
-USER_PROFILE_WEB_SITE_DESC="Web Site Desc"
-USER_PROFILE_WEB_SITE_LABEL="Web site"
-USER_PROFILE_PLUGIN_DESC="User Profile Plug-in"
